@@ -1271,6 +1271,7 @@ Benn Howard <Benn_Howard@raytheon.com>
 Steffen Hieber <Steffen.Hieber@erl9.siemens.de>
 Craig L. Ching <cching@mqsoftware.com>
 Ben Howard <Ben_Howard@raytheon.com>
+Rich Newman <RNewman@directv.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
